--- a/packages/house/doors.yaml
+++ b/packages/house/doors.yaml
@@ -95,7 +95,7 @@ alert:
     repeat: 15
     skip_first: True
     notifiers:
-      - ios_isabellas_iphone_x
+      - mobile_app_isabella_s_iphone_x
   front_door_open:
     name: Front Door left open
     done_message: Door closed
@@ -104,7 +104,7 @@ alert:
     repeat: 2
     skip_first: True
     notifiers:
-      - ios_isabellas_iphone_x
+      - mobile_app_isabella_s_iphone_x
   back_door_open:
     name: Back Door left open
     done_message: Door closed
@@ -113,7 +113,7 @@ alert:
     repeat: 30
     skip_first: True
     notifiers:
-      - ios_isabellas_iphone_x
+      - mobile_app_isabella_s_iphone_x
   balcony_door_open:
     name: Balcony Door left open
     done_message: Door closed
@@ -122,7 +122,7 @@ alert:
     repeat: 1
     skip_first: True
     notifiers:
-      - ios_isabellas_iphone_x
+      - mobile_app_isabella_s_iphone_x
   yard_storage_door_open:
     name: Yard Storage Door left open
     done_message: Door closed
@@ -135,4 +135,4 @@ alert:
       - 5
     skip_first: True
     notifiers:
-      - ios_isabellas_iphone_x
+      - mobile_app_isabella_s_iphone_x
