--- a/packages/house/cleaning_day.yaml
+++ b/packages/house/cleaning_day.yaml
@@ -1,34 +1,53 @@
-automation:
-  - alias: '[House] Cleaning Mode'
-    initial_state: 'on'
-    trigger:
-      - platform: state
-        entity_id: sensor.unlocked_by
-        to: 'Cleaners'
-    condition:
-    - condition: state
-      entity_id: calendar.cleaning_day
-      state: 'on'
-    action:
-      - service: script.turn_on
-        entity_id: script.cleaning_time
-      - service: homeassistant.turn_off
-        entity_id: automation.ring_doorbell_motion_lights
-      - service: notify.ios_isabellas_iphone_x
-        data_template:
-          title: 'Cleaning time'
-          message: 'Cleaners have arrived'
+binary_sensor:  
+  - platform: template
+    sensors:
+      clean_up:
+        friendly_name: "Get ready for cleaners"
+        value_template: >-
+          {% if is_state("calendar.cleaning_day", "on") %}
+            false
+          {% elif state_attr('calendar.cleaning_day', 'offset_reached') %}
+            true
+          {% else %}
+            false
+          {% endif %}
 
-  - alias: '[House] Cleaning Mode Off'
-    initial_state: 'on'
-    trigger:
-      - platform: state
-        entity_id: calendar.house_cleaning
-        to: 'off'
-    action:
-      - service: homeassistant.turn_on
-        entity_id: automation.ring_doorbell_motion_lights
-      - service: notify.ios_isabellas_iphone_x
-        data_template:
-          title: 'Cleaning time over'
-          message: ''
+
+# automation:
+#   - alias: '[House] Cleaning Mode'
+#     initial_state: 'on'
+#     trigger:
+#       - platform: state
+#         entity_id: sensor.unlocked_by
+#         to: 'Cleaners'
+#     condition:
+#       - condition: state
+#         entity_id: calendar.cleaning_day
+#         state: 'on'
+#     action:
+#       - service: script.turn_on
+#         entity_id: script.cleaning_time
+#       - service: homeassistant.turn_off
+#         entity_id: automation.ring_doorbell_motion_lights
+#       - service: notify.mobile_app_isabella_s_iphone_x
+#         data_template:
+#           title: 'Cleaning time'
+#           message: 'Cleaners have arrived'
+#       - service: homeassistant.turn_off
+#         entity_id: input_boolean.ad_litterboxes
+
+#   - alias: '[House] Cleaning Mode Off'
+#     initial_state: 'on'
+#     trigger:
+#       - platform: state
+#         entity_id: calendar.house_cleaning
+#         to: 'off'
+#     action:
+#       - service: homeassistant.turn_on
+#         entity_id: automation.ring_doorbell_motion_lights
+#       - service: notify.mobile_app_isabella_s_iphone_x
+#         data_template:
+#           title: 'Cleaning time over'
+#           message: ''
+#       - service: homeassistant.turn_on
+#         entity_id: input_boolean.ad_litterboxes
