--- a/packages/media_player.yaml
+++ b/packages/media_player.yaml
@@ -8,6 +8,10 @@ homeassistant:
       friendly_name: Plex Shield
       icon: mdi:plex
 
+plex:
+  token: !secret plex_token
+  server: SHIELD
+
 script:
   sonos_say:
     alias: "Sonos TTS script"
@@ -22,7 +26,7 @@ script:
        data_template:
          entity_id: "{{ sonos_entity }}"
          volume_level: "{{ volume }}"
-     - service: tts.google_say
+     - service: tts.google_translate_say
        data_template:
          entity_id: "{{ sonos_entity }}"
          message: "{{ message }}"
